# wtf

./: .gitignore  .rsync-exclude  METHOD.md  Makefile  README.md  SCHEMA.md  STYLE.md  docker-compose-db.yaml  docker-compose.yaml  example.env  package.json  park_scene.xcf  pnpm-lock.yaml
backend/: Cargo.toml  Dockerfile  example.env  package.json
backend/migrations/2023-04-13-005402_conduct_codes/: up.sql
backend/migrations/2023-04-13-005403_dress_codes/: up.sql
backend/migrations/2023-04-13-005404_events/: up.sql
backend/migrations/2023-04-13-005405_logins/: up.sql
backend/migrations/2023-04-13-005408_roles/: up.sql
backend/migrations/2023-04-13-005409_sensitivities/: up.sql
backend/migrations/2023-04-19-071647_accounts/: up.sql
backend/migrations/2023-04-20-013137_survey_results/: up.sql
backend/migrations/2023-04-20-013139_users/: up.sql
backend/migrations/2023-04-22-001929_accounts/: up.sql
backend/migrations/2023-04-22-001932_events/: up.sql
backend/migrations/2023-04-22-001935_preferences/: up.sql
backend/migrations/2023-04-22-001936_propositions/: up.sql
backend/migrations/2023-04-22-001938_relationships/: up.sql
backend/migrations/2023-04-22-001943_survey_results/: up.sql
backend/migrations/2023-04-22-082536_arguments/: up.sql
backend/migrations/2023-04-23-081331_accounts/: up.sql
backend/migrations/2023-04-23-081338_preferences/: up.sql
backend/migrations/2023-04-23-081347_users/: up.sql
backend/sh/: init.sh
backend/src/: main.rs  schema.rs
backend/src/models/: _common.rs  account.rs  argument.rs  conduct_code.rs  (+11 more)
(+166 files in other folders)
