[package]
name = "wtf-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
serde = "1.0.152"
csv = "1.2.1"
rand = "0.8.5"
chrono = {version = "0.4.24", features = ["serde"]}

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4", "fast-rng", "macro-diagnostics", "serde"]
